--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,21 +3,22 @@
     text-align: center;
     border-radius: 2%;
     color: rgb(7, 160, 58);
+    font-size: 50px;
 }
 .container {
-    width: 90%;
+    width: 1024px;
+    margin: 0 auto;
 }
 .table {
-    margin-left: 10px;
-    background-color: lightblue;
+    position: relative;
+    margin-left: 30px;
+    margin-right: 30px;
 }
+
 .form-group {
-    margin-left: 10px;
-    background-color: lightblue;
+    margin-left: 30px;
+    background-color: rgb(65, 152, 252);
 }
 body {
-    background-image: url(../images/steamtrain.jpg);
-    background-image: cover;
-    background-image: no-repeat;
     padding-bottom: 100px;
 }
