--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,24 +1,30 @@
-.jumbotron {
-    background-color: lightblue;
+h1 {
+    background-color: darkgrey;
+    padding: 75px;
     text-align: center;
+    width: 100%;
     border-radius: 2%;
     color: rgb(7, 160, 58);
-    font-size: 50px;
+    font-size: 75px;
 }
+
 .container {
-    width: 1024px;
+    width: 100%;
     margin: 0 auto;
 }
 .table {
-    position: relative;
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 100%;
+    margin: 20px;
 }
 
 .form-group {
-    margin-left: 30px;
+    width: 100%;
+    margin: 20px;
+    margin-right: 200px;
     background-color: rgb(65, 152, 252);
 }
 body {
     padding-bottom: 100px;
+    background-image: url(../images/steamtrain.jpg);
+    background-position: center;
 }
