--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,12 +1,19 @@
-h1 {
-    background-color: darkgrey;
-    padding: 75px;
-    text-align: center;
-    width: 100%;
-    border-radius: 2%;
-    color: rgb(7, 160, 58);
-    font-size: 75px;
+
+.hero-image {
+    background: url(../images/traintracksky.jpg) 0 -200px;
+    background-size: cover;
+    height: 300px;
+    position: relative;
 }
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: navy;
+  }
 
 .container {
     width: 100%;
@@ -20,11 +27,6 @@ h1 {
 .form-group {
     width: 100%;
     margin: 20px;
-    margin-right: 200px;
-    background-color: rgb(65, 152, 252);
+    background-color: lightgray;
 }
-body {
-    padding-bottom: 100px;
-    background-image: url(../images/steamtrain.jpg);
-    background-position: center;
-}
+
